# GLU-BE

./: Makefile  pyproject.toml
api-spec/: openapi.json
app/: config.py  dependencies.py  main.py
app/client/: clerk.py  database.py  httpx.py  logger.py  meillisearch.py  stuff.json
app/client/types/: clerk.py
app/model/: db.py  schema.py
app/route/: integrations.py  message.py  router.py  user.py
app/service/: integration_service.py  message_service.py  user_integration_service.py  user_service.py
app/types/: request.py  response.py
