[project]
name = "glu-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "logfire[fastapi,httpx,sqlalchemy]>=3.6.2",
    "meilisearch-python-sdk>=4.3.0",
    "openai>=1.64.0",
    "pydantic-settings>=2.8.0",
    "ruff>=0.9.7",
    "sqlalchemy[asyncio]>=2.0.38",
]
